RESOLVED FIXED268647
[Site Isolation] Exposed content rect of subframe view is wrong
https://bugs.webkit.org/show_bug.cgi?id=268647
Summary [Site Isolation] Exposed content rect of subframe view is wrong
Sihui Liu
Reported 2024-02-02 11:35:49 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-02 11:58:55 PST
Sihui Liu
Comment 2 2024-02-02 12:32:27 PST
EWS
Comment 3 2024-02-08 11:52:39 PST
Committed 274302@main (b9473ec1d60a): <https://commits.webkit.org/274302@main> Reviewed commits have been landed. Closing PR #23772 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.